--- a/style.css
+++ b/style.css
@@ -36,6 +36,11 @@ body{
   background:var(--bg-url) no-repeat top center/cover;
 }
 
+body {
+  background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
+}
+
 body * { 
   font-family: "Inter", sans-serif;
   color: var(--text-color);
